tests/ui/impl-trait/in-trait/unconstrained-lt.next.stderr
error: return type captures more lifetimes than trait definition
  --> $DIR/unconstrained-lt.rs:11:18
   |
LL | impl<'a, T> Foo for T {
   |      -- this lifetime was captured
LL |     fn test() -> &'a () { &() }
   |                  ^^^^^^
   |
note: hidden type must only reference lifetimes captured by this impl trait
  --> $DIR/unconstrained-lt.rs:7:18
   |
LL |     fn test() -> impl Sized;
   |                  ^^^^^^^^^^
   = note: hidden type inferred to be `&'a ()`

error: aborting due to previous error

